--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
       <div class="grid two">
         <div class="card video-card">
           <div class="video-thumb" aria-label="Ukázkové video">
-            <img src="assets/thumbnails/short-form-promo.png" alt="Short form promo thumbnail">
+            <img src="screenshot_1760780490206.png" alt="Short form promo thumbnail">
           </div>
           <div class="video-meta">
             <h3>Krátký edit videohry</h3>
@@ -464,7 +464,7 @@
     <div class="video-container">
       <div class="video-player">
         <video controls>
-          <source src="assets/videos/showreel.mp4" type="video/mp4">
+          <source src="Me Jalo.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
       </div>
@@ -512,4 +512,5 @@
   </script>
 </body>
 </html>
+
 
